--- a/blog/templates/blog/post/detail.html
+++ b/blog/templates/blog/post/detail.html
@@ -12,4 +12,60 @@
         Published {{ post.publish }} by {{ post.author }}
     </p>
     {{ post.body|linebreaks }}
+    <p>
+        <a href="{% url "blog:post_share" post.id %}">
+            Share this post
+        </a>
+    </p>
+
+    <span>
+        <h2>Similar Posts</h2>
+        {% for similar_post in similar_posts %}
+            <p>
+                <a href="{{ similar_post.get_absolute_url }}">{{ similar_post.title }}</a>
+            </p>
+        {% empty %}
+            <p>There are no similar posts yet.</p>
+        {% endfor %}
+
+    </span>
+
+
+    <span>
+        {% with comments.count as total_comments %}
+            <h2>
+                {{ total_comments }} comment{{ total_comments|pluralize }}
+            </h2>
+        {% endwith %}
+    </span>
+
+    {% for comment in comments %}
+        <div class="comment">
+            <p class="info">
+                Comment {{ forloop.counter }} by {{ comment.name }}
+                Created {{ comment.created }}
+            </p>
+            {{ comment.body|linebreaks }}
+        </div>
+    {% empty %}
+        <p>No Comments.</p>
+    {% endfor %}
+
+
+    <span>
+        {% if new_comment %}
+            <h2>
+                Your comment has been added.
+            </h2>
+        {% else %}
+            <h2>Add a new commnet</h2>
+            <form action="." method="post">
+                {{ comment_form.as_p }}
+                {% csrf_token %}
+                <p>
+                    <input type="submit" value="Add comment">
+                </p>
+            </form>
+        {% endif %}
+    </span>
 {% endblock %}
